[metadata]
name = quactography
version = 0.0.1

[options]
packages =
    quactography
    scripts

[options.entry_points]
console_scripts =
    1_build_adj_matrix.py = scripts.build_adj_matrix:main
    2_draw_adj_matrix.py = scripts.draw_adj_matrix:main
    1_build_random_adj_matrix.py = scripts.build_random_adj_matrix:main
    2_draw_random_adj_matrix.py = scripts.draw_random_adj_matrix:main
    3_find_max_intensity_diffusion_path.py = scripts.find_max_intensity_diffusion_path:main
    4_plot_distribution_probabilities.py = scripts.plot_distribution_probabilities:main
    5_plot_optimal_paths.py = scripts.plot_optimal_paths:main
    demo.ipynb = scripts.demo:main
    demo_hamiltonian_const.ipynb = scripts.demo_hamiltonian_const:main
    demo.sh = scripts.demo:main
    

